HelloUltraviolet/Fixtures/RejectedSource/Expressions/PtrNullSynthesis/Source/Main.uv
//! Rejected null pointer expression specimen for synthesis without expected type.

public procedure ptrNullSynthesisReference() -> i32 {
    let pointer = Ptr::null()
    return 0
}
